[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "CPerezz <carlos@dusk.network>"
]
description = "Dusk's fork of the implementation of the Jubjub elliptic curve group"
homepage = "https://github.com/dusk-network/jubjub"
license = "MIT/Apache-2.0"
name = "dusk-jubjub"
repository = "https://github.com/dusk-network/jubjub"
version = "0.10.0"
keywords = ["cryptography", "jubjub", "zk-snarks", "ecc", "elliptic-curve"]
categories =["algorithms", "cryptography", "science"]
edition = "2018"
exclude = [".github/workflows/ci.yml", "github/workflows/rust.yml",
".gitignore", 
]

[dependencies]
dusk-bytes = "0.1"
dusk-bls12_381 = {git = "https://github.com/malefooo/bls12_381", branch = "v080", default-features = false, features = ["groups", "pairings", "endo"]}

subtle = {version="^2.3", default-features = false}
rand_core = {version = "0.6", default-features=false}
canonical = {git = "https://github.com/dusk-network/canonical.git", tag = "canonical-0.6.0", optional = true}
canonical_derive = {git = "https://github.com/dusk-network/canonical.git",tag = "canonical-0.6.0", optional = true}

[dev-dependencies]
rand_xorshift = {version="0.3", default-features = false}
blake2 = "0.10.4"

[features]
default = ["std"]
std = ["dusk-bls12_381/default"]
canon = ["canonical", "canonical_derive", "dusk-bls12_381/canon"]

